# kelo-bnpl-platform

./: .env.example  .gitignore  AUDIT_REPORT.md  Dockerfile.backend  Dockerfile.frontend  FRONTEND_STRUCTURE.md  README.md  SECURITY.md  TECHNICAL_BRIEF.md  docker-compose.prod.yml  docker-compose.yml  fix-zod-errors.sh  next.config.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
backend/: README.md  go.mod  go.sum
backend/api/: swagger.yaml
backend/database/: schema.sql
circuits/: creditScore.circom
contracts/aptos/: Move.toml
contracts/evm/: IKeloLiquidityPool.sol  KeloCreditVerifier.sol  KeloLiquidityPool.sol
contracts/hedera/: DIDIntegration.sol  HCSMessageExample.sol  HederaDIDIntegration.sol  KeloLoanNFT.sol  LoanAgreementNFT.sol
contracts/layerzero/: BaseLiquidityReceiver.sol  CrossChainMessageExample.sol  HederaOFTAdapter.sol  LayerZeroEVMReceiver.sol  LayerZeroHederaEndpoint.sol
contracts/solana/: Cargo.toml
contracts/solana/program/: Cargo.toml
contracts/solana/program/src/: lib.rs
db/: supabase_schema.sql
jules-scratch/verification/: verify_checkout.py  verify_login.py  verify_marketplace.py  verify_merchant_store.py  verify_redirection_fix.py  verify_registration.py  verify_wallet_selector.py
prisma/: schema.prisma
prisma/prisma/: dev.db
src/: webpack.d.ts
src/app/: layout.tsx  page.tsx
src/components/: product-card.tsx
src/contexts/: AuthProvider.tsx  UserContext.tsx  Web3Provider.tsx  auth-context.tsx
src/hooks/: use-dashboard.ts  use-merchant.ts
src/services/: admin.ts  (+6 more)
test-results/: .last-run.json
(+300 files in other folders)
