[package]
name = "kelo-liquidity-pool"
version = "0.1.0"
description = "Kelo Liquidity Pool Program for Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kelo_liquidity_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.29.0", features = ["mint", "token"] }
solana-program = "1.17.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.2.0"